# Projecto-CalculadoraCientifica

./: .replit  README.md  pyproject.toml  replit.md
src/: Calculadora.py  main.py
